tests/ui/methods/issue-7950.stderr
error[E0599]: no associated function or constant named `bar` found for struct `Foo` in the current scope
  --> $DIR/issue-7950.rs:6:10
   |
LL | struct Foo;
   | ---------- associated function or constant `bar` not found for this struct
...
LL |     Foo::bar();
   |          ^^^ associated function or constant not found in `Foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
